# webtronics_api

./: .env_example  .gitignore  README.md  alembic.ini  pyproject.toml
app/: config.py  database.py  main.py
app/auth/: exceptions.py  jwt.py  schemas.py
app/core/: service.py
app/migrations/: env.py
app/migrations/versions/: a2c72c69957b_first_migration.py
app/templates/: email_verif.html
app/users/: models.py
